<resources>
    <string name="app_name">ShoppingmallDemo</string>
    <string name="sign_up">Sign Up</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="account_info" translatable="false">UserName\n(AccountEmail)</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create account</string>
    <string name="guest_login">Guest Login (Start without signing up)</string>
    <string name="input_user_name">input user name</string>
    <string name="sign_in_to_an_existing_account">Sign in to an existing account</string>
    <string name="pw_lenth_6">8-15 characters including letters, numbers, and special characters</string>
    <string name="confirm_pw">confirm password</string>
    <string name="email_hint">Please enter according to the email format.</string>
    <string name="trade_name">trade name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="just_enter_the_numbers">Just enter the numbers.</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="option">option</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="privacy_label">I agree with the personal information processing policy.</string>
    <string name="privacy">Privacy</string>
    <string name="view_privacy">View privacy</string>
</resources>